crates/tokmd-types/tests/snapshots/type_snapshots__evidence_sources.snap
---
source: crates/tokmd-types/tests/type_snapshots.rs
assertion_line: 921
expression: all
---
[
  "ci_artifact",
  "cached",
  "ran_local"
]
