crates/tokmd-types/tests/snapshots/type_snapshots__handoff_intelligence_empty.snap
---
source: crates/tokmd-types/tests/type_snapshots.rs
assertion_line: 707
expression: intel
---
{
  "tree": null,
  "tree_depth": null,
  "hotspots": null,
  "complexity": null,
  "derived": null,
  "warnings": []
}
